@@ -167,10 +167,10 @@ return $day;
  */
 function zbx_date2str($format, $value = null){
 	static $weekdaynames, $weekdaynameslong, $months, $monthslong;
-	
-	if(is_null($value)) $value = time();	
+
+	if(is_null($value)) $value = time();
 	else if(!$value) return S_NEVER;
-	
+
 	if(!is_array($weekdaynames)) {
 		$weekdaynames = array(
 					0 => S_WEEKDAY_SUNDAY_SHORT,
@@ -181,7 +181,7 @@ function zbx_date2str($format, $value = null){
 					5 => S_WEEKDAY_FRIDAY_SHORT,
 					6 => S_WEEKDAY_SATURDAY_SHORT);
 	}
-	
+
 	if(!is_array($weekdaynameslong)) {
 		$weekdaynameslong = array(
 					0 => S_WEEKDAY_SUNDAY_LONG,
@@ -224,14 +224,14 @@ function zbx_date2str($format, $value = null){
 					11 => S_MONTH_NOVEMBER_LONG,
 					12 => S_MONTH_DECEMBER_LONG);
 	}
-	
+
 	$rplcs = array(
 		'l' => $weekdaynameslong[date('w',$value)],
 		'F' => $monthslong[date('n',$value)],
 		'D' => $weekdaynames[date('w',$value)],
 		'M' => $months[date('n',$value)]
 	);
-	
+
 	$output = '';
 	$part = '';
 	$length = zbx_strlen($format);
@@ -247,9 +247,9 @@ function zbx_date2str($format, $value = null){
 			$part .= $char;
 		}
 	}
-	
+
 	$output .= (zbx_strlen($part) > 0) ? date($part, $value) : '';
-	
+
 return $output;
 }
 
@@ -358,7 +358,7 @@ function hex2rgb($color){
 		return false;
 	}
 
-	$r = hexdec($r); 
+	$r = hexdec($r);
 	$g = hexdec($g);
 	$b = hexdec($b);
 
@@ -529,7 +529,7 @@ function convert_units($value, $units, $convert=ITEM_CONVERT_WITH_UNITS){
 
 //------
 	switch($convert){
-		case 0: $units = trim($units); 
+		case 0: $units = trim($units);
 		case 1: $desc = $valUnit['short']; break;
 		case 2: $desc = $valUnit['long']; break;
 	}
@@ -613,7 +613,7 @@ function zbx_strlen($str){
 	else{
 		return strlen($str);
 	}
-	
+
 /*
 	$zbx_strlen = strlen($zbx_strlen);
 
@@ -661,7 +661,7 @@ function zbx_stristr($haystack, $needle){
 
 function zbx_substring($haystack, $start, $end=null){
 	if(!is_null($end) && ($end < $start)) return '';
-	
+
 	if(defined('ZBX_MBSTRINGS_ENABLED')){
 		if(is_null($end))
 			$result = mb_substr($haystack, $start);
@@ -674,12 +674,12 @@ function zbx_substring($haystack, $start, $end=null){
 		else
 			$result = substr($haystack, $start, ($end - $start));
 	}
-	
+
 	return $result;
 }
 
 function zbx_substr($string, $start, $length=null){
-	
+
 	if(defined('ZBX_MBSTRINGS_ENABLED')){
 		if(is_null($length))
 			$result = mb_substr($string, $start);
@@ -692,23 +692,23 @@ function zbx_substr($string, $start, $length=null){
 		else
 			$result = substr($string, $start, $length);
 	}
-	
+
 	return $result;
 }
 
 function zbx_str_revert($str){
 	if(defined('ZBX_MBSTRINGS_ENABLED')){
 		$result = '';
-		
+
 		$stop = mb_strlen($str);
-		for($idx=0; $idx<$stop; $idx++){ 
-			$result = mb_substr($str, $idx, 1) . $result; 
-		} 
+		for($idx=0; $idx<$stop; $idx++){
+			$result = mb_substr($str, $idx, 1) . $result;
+		}
 	}
 	else{
 		$result = strrev($str);
 	}
-	
+
 	return $result;
 }
 
@@ -825,20 +825,20 @@ function zbx_rksort(&$array, $flags=NULL){
 // used only in morder_result
 function sortSub($array, $sortorder){
 	$result = array();
-	
+
 	$keys = array_keys($array);
 	natcasesort($keys);
-	
-	
+
+
 	if($sortorder != ZBX_SORT_UP)
 		$keys = array_reverse($keys);
-	
+
 	foreach($keys as $key){
 		$tst = reset($array[$key]);
 		if(isset($tst[0]) && !is_array($tst[0])){
 			$array[$key] = sortSub($array[$key], $sortorder);
 		}
-		
+
 		foreach($array[$key] as $id){
 			$result[] = $id;
 		}
@@ -849,7 +849,7 @@ function sortSub($array, $sortorder){
 function morder_result(&$array, $sortfields, $sortorder=ZBX_SORT_UP){
 	$tmp = array();
 	$result = array();
-	
+
 	foreach($array as $key => $el){
 		unset($pointer);
 		$pointer =& $tmp;
@@ -857,7 +857,7 @@ function morder_result(&$array, $sortfields, $sortorder=ZBX_SORT_UP){
 			if(!isset($pointer[$el[$f]])) $pointer[$el[$f]] = array();
 			$pointer =& $pointer[$el[$f]];
 		}
-		$pointer[] = $key;		
+		$pointer[] = $key;
 	}
 
 	$order = sortSub($tmp, $sortorder);
@@ -865,7 +865,7 @@ function morder_result(&$array, $sortfields, $sortorder=ZBX_SORT_UP){
 	foreach($order as $key){
 		$result[$key] = $array[$key];
 	}
-	
+
 	$array = $result;
 	return true;
 }
@@ -1100,7 +1100,7 @@ function zbx_array_mintersect($keys, $array){
 					$result[$sub_field] = $array[$sub_field];
 					break;
 				}
-			}				
+			}
 		}
 		else if(isset($array[$field])){
 			$result[$field] = $array[$field];
@@ -1113,16 +1113,16 @@ function zbx_str2links($text){
 // $value = preg_replace('#(https?|ftp|file)://[^\n\t\r ]+#u', '<a href="$0">$0</a>', $value);
 	$result = array();
 	if(empty($text)) return $result;
-	
+
 	preg_match_all('#https?://[^\n\t\r ]+#u', $text, $matches, PREG_OFFSET_CAPTURE);
-	
+
 	$start = 0;
 	foreach($matches[0] as $match){
 		$result[] = zbx_substr($text, $start, $match[1]-$start);
 		$result[] = new CLink($match[0], $match[0], null, null, true);
 		$start = $match[1] + zbx_strlen($match[0]);
 	}
-	
+
 	$result[] = zbx_substr($text, $start, zbx_strlen($text));
 	return $result;
 }
